--- a/journal/.vscode/settings.json
+++ b/journal/.vscode/settings.json
@@ -1,26 +1,27 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#b300b3",
-        "activityBar.background": "#b300b3",
+        "activityBar.activeBackground": "#6b852f",
+        "activityBar.background": "#6b852f",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#9f9f00",
+        "activityBarBadge.background": "#89bed5",
         "activityBarBadge.foreground": "#15202b",
         "commandCenter.border": "#e7e7e799",
-        "editorGroup.border": "#b300b3",
-        "panel.border": "#b300b3",
-        "sash.hoverBorder": "#b300b3",
-        "statusBar.background": "#800080",
-        "statusBar.debuggingBackground": "#008000",
+        "editorGroup.border": "#6b852f",
+        "panel.border": "#6b852f",
+        "sash.hoverBorder": "#6b852f",
+        "statusBar.background": "#4d5f22",
+        "statusBar.debuggingBackground": "#34225f",
         "statusBar.debuggingForeground": "#e7e7e7",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#b300b3",
-        "statusBarItem.remoteBackground": "#800080",
+        "statusBarItem.hoverBackground": "#6b852f",
+        "statusBarItem.remoteBackground": "#4d5f22",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "tab.activeBorder": "#b300b3",
-        "titleBar.activeBackground": "#800080",
+        "tab.activeBorder": "#6b852f",
+        "titleBar.activeBackground": "#4d5f22",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#80008099",
+        "titleBar.inactiveBackground": "#4d5f2299",
         "titleBar.inactiveForeground": "#e7e7e799"
-    }
+    },
+    "peacock.color": "#4d5f22"
 }
